--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,13 @@
             <version>2.4</version>
             <type>jar</type>
         </dependency>
+        <dependency>
+                <groupId>org.json</groupId>
+                <artifactId>json</artifactId>
+                <version>20151123</version>
+        </dependency>
+
+
 
     </dependencies>
 
